feat: add address endpoint
