# src/business/model/interfaces.ts
@@ -70,8 +70,24 @@ interface PricesResponse {
   name: string,
   price: number
 }
-
 export interface InfoCart {
   idProduct: string,
   amount: number
+}
+
+export interface Address {
+  altitude: number,
+  cep: string,
+  latitude: string,
+  longitude: string,
+  logradouro: string,
+  bairro: string,
+  cidade: {
+    ddd: number,
+    ibge: string,
+    nome: string
+  },
+  estado: {
+    sigla: string
+  }
 }
